# JTCG_chatbot

./: README.md  pyproject.toml  simple_ruff_test.py
data/raw/: ai-eng-test-sample-conversations.json  ai-eng-test-sample-knowledges.csv  ai-eng-test-sample-order.json
src/chatbot/: cli.py  main.py  simple_agent_test.py  simple_chatbot_test.py  simple_factory_test.py
src/chatbot/agent/: agent_factory.py  faq_agent.py  handover_agent.py  orchestrator_agent.py  order_agent.py  product_agent.py  redirect_agent.py
src/chatbot/tool/: base_tool.py  faq_tool.py  handover_tool.py  order_tool.py  product_tool.py  redirect_tool.py
src/chatbot/utils/: load_env.py  vector_db.py
