[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "This is a project for multi-agent chatbot system."
authors = ["Dan <asign1022@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"


opencv-python = "^4.11.0.86"
matplotlib = "^3.10.3"
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatbot = "JTCG_chatbot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
