[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "An AI-powered chatbot with agent-based architecture."
authors = ["Dan <asign1022@gmail>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "chatbot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.3"
langchain = { extras = ["openai"], version = "^0.3.27" }
langchain-core = "^0.3.74"
langgraph = "^0.6.6"
langchain-tavily = "^0.2.11"
psycopg = {extras = ["binary"], version = "^3.2.9"}
langchain-community = "^0.3.27"
faiss-cpu = "^1.12.0"
textblob = "^0.19.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
black = "^24.4.2"
langchain-core = "^0.3.74"
langgraph = "^0.6.6"
langgraph-checkpoint-postgres = "^2.0.23"
langgraph-checkpoint-redis = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# chatbot = "chatbot.cli:main"

# [tool.setuptools]
# package-dir = { "" = "src" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
